# kubeXhunt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  README.md  SECURITY.md  kubexhunt.py  pyproject.toml  setup.py
.github/: release-template.md
.github/workflows/: release.yml
kubexhunt/: ABOUT.md  __init__.py  __main__.py
kubexhunt/advanced/: __init__.py  persistence.py  secret_sources.py  workload_identity.py
kubexhunt/api/: __init__.py  auth.py  base.py  cache.py  cloud.py  kube.py  rate_limit.py  transport.py
kubexhunt/cli/: exploit.py  main.py  plugins.py  report.py  scan.py
kubexhunt/cloud_iam/: __init__.py  aws_iam.py  azure_iam.py  gcp_iam.py
kubexhunt/core/: __init__.py  adapters.py  config.py  context.py  enums.py  evidence.py  exceptions.py  graph.py  legacy.py  logging.py  models.py  opsec.py  result.py  runtime.py  state.py  utils.py
kubexhunt/correlation/: __init__.py  attack_graph.py  attack_paths.py  identity.py  risk.py  scoring.py
kubexhunt/data/cves/: kernel.yaml
kubexhunt/engines/: __init__.py  advanced.py  attack_chains.py  azure.py  base.py  cloud.py  cluster_intel.py  cves.py  dos.py  eks.py  escape.py  etcd.py  gke.py  helm.py  kubelet.py  misc.py  network.py  node.py  openshift.py  persistence.py  pod.py  privesc.py  proc_harvest.py  rbac.py  registry.py  reporting.py  runtime.py  secrets.py  setup.py  stealth.py  supply_chain.py
kubexhunt/evasion/: __init__.py  evasion_generator.py  runtime_detector.py
kubexhunt/exploit/: __init__.py  base.py  chain_generator.py  cloud_pivoting.py  crd_abuse.py  daemonset_root.py  ephemeral_container.py  hostpath.py  kubelet_exec.py  registry.py  token_pivot.py
kubexhunt/mappings/: __init__.py  cis.py  cwe.py  mitre.py  nist.py
kubexhunt/network/: __init__.py  policy_analyzer.py
kubexhunt/orchestrator/: pipeline.py
kubexhunt/output/: base.py  graphviz_report.py  html_report.py  json_report.py  markdown_report.py  sarif_report.py
kubexhunt/plugins/: interface.py  loader.py
kubexhunt/services/: __init__.py  exploit_service.py  plugin_service.py  report_service.py  scan_service.py
kubexhunt/supply_chain/: __init__.py  cicd_attack.py  registry_attack.py
tests/: conftest.py  test_aws_iam.py  test_azure_iam.py  test_cicd_attack.py  test_cloud_pivoting.py  test_core_graph.py  test_core_models.py  test_core_opsec.py  test_evasion_generator.py  test_exploit_chain_generator.py  test_gcp_iam.py  test_network_policy.py  test_persistence.py  test_registry_attack.py  test_runtime_detector.py  test_secret_sources.py  test_workload_identity.py
tests/integration/: test_cli_parity.py
tests/unit/: test_api_client.py
