[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubexhunt"
version = "2.0.0"
description = "Kubernetes post-compromise security assessment framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "KubeXHunt Maintainers", email = "maintainers@kubexhunt.io"}
]
keywords = ["kubernetes", "security", "assessment", "red-team", "post-exploitation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    # Pure stdlib — zero external dependencies for core functionality
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
    "bandit[toml]>=1.7",
    "safety>=2.3",
]

graph = [
    "neo4j>=5.0",  # For Phase 2+ graph analysis
]

reporting = [
    "jinja2>=3.0",  # For advanced HTML templating
]

cloud = [
    "boto3>=1.26",  # AWS
    "google-cloud-iam>=2.0",  # GCP
    "azure-identity>=1.13",  # Azure
]

[project.urls]
Homepage = "https://github.com/mr-xhunt/kubeX"
Documentation = "https://github.com/mr-xhunt/kubeX/blob/main/README.md"
Repository = "https://github.com/mr-xhunt/kubeX"
Issues = "https://github.com/mr-xhunt/kubeX/issues"
Discussions = "https://github.com/mr-xhunt/kubeX/discussions"

[project.scripts]
kubexhunt = "kubexhunt.cli.main:main"

[tool.setuptools]
packages = [
    "kubexhunt",
    "kubexhunt.advanced",
    "kubexhunt.api",
    "kubexhunt.cli",
    "kubexhunt.cloud_iam",
    "kubexhunt.core",
    "kubexhunt.correlation",
    "kubexhunt.engines",
    "kubexhunt.evasion",
    "kubexhunt.exploit",
    "kubexhunt.mappings",
    "kubexhunt.network",
    "kubexhunt.orchestrator",
    "kubexhunt.output",
    "kubexhunt.plugins",
    "kubexhunt.services",
    "kubexhunt.supply_chain",
]
include-package-data = true

[tool.setuptools.package-data]
kubexhunt = [
    "data/**/*.json",
    "data/**/*.txt",
    "mappings/**/*.json",
]

# Type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "kubexhunt.correlation.risk"
ignore_errors = true

# Code style
[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # Isort imports
    "B",    # Flake8-bugbear
    "C4",   # Flake8-comprehensions
    "UP",   # Pyupgrade
    "ARG",  # Flake8-unused-arguments
    "SIM",  # Flake8-simplify
]
ignore = [
    "E501",   # Line too long (ruff formatter handles this)
    "B008",   # Do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Testing
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "cloud: marks tests as cloud-specific",
]

[tool.coverage.run]
branch = true
source = ["kubexhunt"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true

# Security
[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B601"]  # assert_used, paramiko_calls

# Vulnerability checks
[tool.safety]
json = true
